# librePLM

./: CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  train.py
configs/: run.yaml
src/libreplm/: train.py
src/libreplm/cli/: cli.py  smoke_test.py  train.py
src/libreplm/configs/: config.yaml
src/libreplm/data/: dataset.py
src/libreplm/eval/: __init__.py  base.py  evaluator.py  logger.py  registry.py
src/libreplm/models/: attention.py  blocks.py  encoder.py  mlp.py
src/libreplm/utils/: console.py  losses.py
src/procoder/: train.py
src/procoder/cli/: cli.py  smoke_test.py  train.py
src/procoder/data/: collate.py  dataset.py
tests/: README.md  conftest.py
tests/integration/: test_checkpointing_and_resume.py  test_cli_train_mlm.py  test_cli_train_multi_eval.py  test_cli_train_multi_train.py  test_cli_train_smoke.py  test_cli_train_with_csv.py  test_cli_train_with_csv_varlen.py  test_cli_train_with_p_at_l.py  test_cli_train_with_parquet.py  test_cli_train_with_parquet_coords.py  test_cli_train_with_parquet_shards_mixed.py  test_click_cli.py  test_eval_harness_regression.py  test_mlm_p_at_l_structure_eval.py  test_package_data.py  test_run_training_programmatic.py  test_structure_folder_eval.py
tests/unit/: test_attention.py  test_contact_metrics.py  test_dataset_mlm.py  test_eval_base.py  test_eval_classification_metrics.py  test_eval_evaluator.py  test_eval_logger.py  test_eval_registry.py  test_mlm_collate.py  test_mlm_model.py  test_rmsnorm.py  test_structure_dataset.py  test_structure_parser.py  test_train_helpers.py
tests/utils/: synthetic.py
(+23 files in other folders)
